--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+1.3
+ - Compatibility with CiviCRM 4.4
+ - Create merged document in multiple passes
+
+1.2.1
+ - declare 4.3 compatibility
+
+1.2
+ - Compatibility with CiviCRM 4.3
+
 1.1.4
  - Fix automatic info.xml update...
 
